--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,15 @@ code {
 }
 
 canvas{
-  width: 1900px;
-  height: 1000px;
+  width:100%;
+  height: 100%;
   background: color #000;;
 }
 
-#canvas-container{
+/*#canvas-container{
   width: 1200px;
   height: 700px;
-}
+}*/
 
 .testhtml{
   width: 120px;
