--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000;
+  
 }
 
 code {
@@ -14,14 +14,15 @@ code {
 }
 
 canvas{
-  width:100%;
+  width: 100%;
   height: 100%;
-  background: color #000;;
+  background: #000;;
 }
 
 /*#canvas-container{
   width: 1200px;
   height: 700px;
+  background: color #000;;
 }*/
 
 .testhtml{
@@ -38,5 +39,6 @@ canvas{
   box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
   border: 1px solid rgba(127,255,255,0.75);
 }
+
 
 
