--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,18 @@ canvas{
 }
 
 .OneElement {
-  height: 4500px;
-  width: 4000px;
+  height: 100px;
+  width: 80px;
   /*background-color: blue;*/
-  font-size: 1000px;
+  color: rgba(255,255,255,0.75);
+  font-size: 40px;
+  box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
+  border: 1px solid rgba(127,255,255,0.25);
+  font-family: Helvetica, sans-serif;
+  text-align: center;
+  line-height: normal;
+  cursor: default;
+ 
   
 }
 
