--- a/src/index.css
+++ b/src/index.css
@@ -55,5 +55,16 @@ canvas{
  
   
 }
+.name{
+  position: absolute;
+  bottom: 15px;
+  left: 0px;
+  right: 0px;
+  font-size: 12px;
+  color: rgba(127,255,255,0.75);
+  text-align: center;
+  line-height: normal;
+  cursor: default;
+}
 
 
