--- a/src/index.css
+++ b/src/index.css
@@ -67,4 +67,39 @@ canvas{
   cursor: default;
 }
 
+button {     
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;        
+}
+
+.display {
+  position: absolute;
+  top: -240px;
+  left: -100px;
+  right: 0px;
+  font-size: 40px;
+  font-weight: bold;
+  color: rgba(255,255,255,0.75);
+  text-shadow: 0 0 10px rgba(0,255,255,0.95);
+  box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
+  border: 1px solid rgba(127,255,255,0.25);
+  float: left;
+  height: 390px;
+  width: 400px;
+}
+.displayOff {
+  position: absolute;
+  top: -340px;
+  left: -400px;
+  right: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(255,255,255,0.75);
+  text-shadow: 0 0 10px rgba(0,255,255,0.95);
+  cursor:pointer;
+}
+
 
