--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,8 @@ button {
 
 .display {
   position: absolute;
-  top: -240px;
-  left: -100px;
+  top: -200px;
+  left: -80px;
   right: 0px;
   padding-top: 30px;
   font-size: 30px;
@@ -88,7 +88,7 @@ button {
   box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
   border: 1px solid rgba(127,255,255,0.25);
   float: left;
-  height: 390px;
+  height: 540px;
   width: 400px;
   text-align: center;
   line-height: 1.8;
@@ -120,6 +120,7 @@ button {
 
 .atomicnumber{
   font-size: 20px;
+  margin-top: 20px;
 }
 
 .atomicrealnumber{
@@ -128,6 +129,10 @@ button {
 
 .atomicDescription{
   font-size: 12px;
+  margin-top: 20px;
+  text-align: justify;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 
