--- a/src/index.css
+++ b/src/index.css
@@ -124,4 +124,30 @@ button {
   margin-right: 8px;
 }
 
+.searcher {
+  position: absolute;
+  top: -250px;
+  right: -100px;
+  height: 60px;
+  width: 300px;
+  font-size: 30px;
+  font-weight: bold;
+  color: rgba(255,255,255,0.75);
+  background-color: rgba(0, 127, 100, 30);
+  text-shadow: 0 0 10px rgba(0,255,255,0.95);
+  box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
+  border: 1px solid rgba(127,255,255,0.25);
+  text-align: center;
+  line-height: 1.9;
+
+}
+
+.searchinput{
+  position: relative;
+  bottom: 7px;
+  right: 55px;
+  height: 40px;
+  width: 125 px;
+}
+
 
