--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ canvas{
   font-family: Helvetica, sans-serif;
   text-align: center;
   line-height: normal;
-  cursor: default;
+  cursor: pointer;
  
   
 }
@@ -92,6 +92,8 @@ button {
   width: 400px;
   text-align: center;
   line-height: 1.8;
+  animation-name: exampledescription;
+  animation-duration: 3s;
 
 }
 
@@ -105,15 +107,21 @@ button {
   color: rgba(255,255,255,0.75);
   text-shadow: 0 0 10px rgba(0,255,255,0.95);
   cursor:pointer;
+  animation-name: exampledescription;
+  animation-duration: 3s;
 }
 
 .atomicnumber{
   font-size: 20px;
   margin-top: 20px;
+  animation-name: exampledescription;
+  animation-duration: 3s;
 }
 
 .atomicrealnumber{
   font-size: 20px;
+  animation-name: exampledescription;
+  animation-duration: 3s;
 }
 
 .atomicDescription{
@@ -122,6 +130,13 @@ button {
   text-align: justify;
   margin-left: 8px;
   margin-right: 8px;
+ 
+  animation-name: exampledescription;
+  animation-duration: 3s;
+  
+  
+
+
 }
 
 .searcher {
@@ -150,4 +165,13 @@ button {
   width: 125 px;
 }
 
+@keyframes example{
+  0% {height: 0px;}
+  100% {height: 600px;}
+}
+@keyframes exampledescription{
+ 
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
